// file: proto/gcommon/v1/media/media_analysis.proto
// version: 1.0.0
// guid: cdef012-3456-789a-c7d8-e9f0a1b2c3d4

edition = "2023";

package gcommon.v1.media;

import "gcommon/v1/media/media_quality.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/media";

// Comprehensive media analysis results.
message MediaAnalysis {
  TechnicalMetadata technical = 1;
  MediaQuality quality_analysis = 2;
  repeated SceneDetection scenes = 3 [(buf.validate.field).repeated.min_items = 1];
  repeated ThumbnailInfo thumbnails = 4 [(buf.validate.field).repeated.min_items = 1];
  AudioAnalysis audio_analysis = 5;
}

// Technical metadata extracted from media.
message TechnicalMetadata {
  google.protobuf.Duration duration = 1;
  int64 file_size = 2 [(buf.validate.field).int64.gte = 0];
  int64 bitrate = 3 [(buf.validate.field).int64.gte = 0];
  string container_format = 4 [(buf.validate.field).string.min_len = 1];
  VideoStreamInfo video = 5;
  repeated AudioStreamInfo audio_streams = 6 [(buf.validate.field).repeated.min_items = 1];
  repeated SubtitleStreamInfo subtitle_streams = 7 [(buf.validate.field).repeated.min_items = 1];
}

// Video stream information.
message VideoStreamInfo {
  string codec = 1 [(buf.validate.field).string.min_len = 1];
  int32 width = 2 [(buf.validate.field).int32.gte = 0];
  int32 height = 3 [(buf.validate.field).int32.gte = 0];
  double frame_rate = 4 [(buf.validate.field).double.gte = 0.0];
  int64 bitrate = 5 [(buf.validate.field).int64.gte = 0];
  string pixel_format = 6 [(buf.validate.field).string.min_len = 1];
  string color_space = 7 [(buf.validate.field).string.min_len = 1];
}

// Audio stream information.
message AudioStreamInfo {
  int32 stream_index = 1 [(buf.validate.field).int32.gte = 0];
  string codec = 2 [(buf.validate.field).string.min_len = 1];
  int32 sample_rate = 3 [(buf.validate.field).int32.gte = 0];
  int32 channels = 4 [(buf.validate.field).int32.gte = 0];
  int64 bitrate = 5 [(buf.validate.field).int64.gte = 0];
  string language = 6 [(buf.validate.field).string.min_len = 1];
  string title = 7 [(buf.validate.field).string.min_len = 1];
}

// Subtitle stream information.
message SubtitleStreamInfo {
  int32 stream_index = 1 [(buf.validate.field).int32.gte = 0];
  string codec = 2 [(buf.validate.field).string.min_len = 1];
  string language = 3 [(buf.validate.field).string.min_len = 1];
  string title = 4 [(buf.validate.field).string.min_len = 1];
  bool forced = 5;
  bool hearing_impaired = 6;
}

// Scene detection results.
message SceneDetection {
  google.protobuf.Duration start_time = 1;
  google.protobuf.Duration end_time = 2;
  double confidence = 3 [(buf.validate.field).double.gte = 0.0];
  string scene_type = 4; // dialog, action, credits, etc.
}

// Thumbnail information.
message ThumbnailInfo {
  google.protobuf.Duration timestamp = 1;
  string file_path = 2 [(buf.validate.field).string.min_len = 1];
  int32 width = 3 [(buf.validate.field).int32.gte = 0];
  int32 height = 4 [(buf.validate.field).int32.gte = 0];
}

// Audio analysis results.
message AudioAnalysis {
  double peak_level = 1; // Peak audio level in dB
  double rms_level = 2; // RMS audio level in dB
  repeated SilentSegment silent_segments = 3 [(buf.validate.field).repeated.min_items = 1];
  double dynamic_range = 4; // Dynamic range in dB
}

// Silent audio segments.
message SilentSegment {
  google.protobuf.Duration start_time = 1;
  google.protobuf.Duration end_time = 2;
  double threshold_db = 3; // Silence threshold used
}
